change base path

--- a/portfolio/work1/index.html
+++ b/portfolio/work1/index.html
@@ -105,15 +105,15 @@ ga('send', 'pageview');
 
 <h3 id="pdf-形式">pdf 形式</h3>
 
-<p><a href="../../../キーボード入力表_mac.pdf" title="キーボード入力表_mac.pdf">キーボード入力表_mac</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%AD%E3%83%BC%E3%83%9B%E3%82%99%E3%83%BC%E3%83%88%E3%82%99%E5%85%A5%E5%8A%9B%E8%A1%A8_mac.pdf" title="キーボード入力表_mac.pdf">キーボード入力表_mac.pdf</a></p>
 
 <h3 id="svg-形式">svg 形式</h3>
 
-<p><a href="../../../キーボード入力表_mac.svg" title="キーボード入力表_mac.svg">キーボード入力表_mac</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%AD%E3%83%BC%E3%83%9B%E3%82%99%E3%83%BC%E3%83%88%E3%82%99%E5%85%A5%E5%8A%9B%E8%A1%A8.svg" title="キーボード入力表.svg">キーボード入力表.svg</a></p>
 
 <h3 id="ライセンス">ライセンス</h3>
 
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=300&amp;h=105" alt="Cretive Commons BY SA" /></p>
+<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=100" alt="Cretive Commons BY SA" /></p>
 
 <p><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">BY SA について</a></p>
          <div id="disqus_thread"></div>
