--- a/portfolio/work6/index.html
+++ b/portfolio/work6/index.html
@@ -107,15 +107,15 @@ ga('send', 'pageview');
 
 <h3 id="pdf-形式">pdf 形式</h3>
 
-<p><a href="../../../Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf" title="Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf">Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/Java%20%E3%81%AE%E6%8A%BD%E8%B1%A1%E3%82%AF%E3%83%A9%E3%82%B9%E3%83%BB%E3%82%A4%E3%83%B3%E3%82%BF%E3%83%95%E3%82%A7%E3%83%BC%E3%82%B9%E3%83%BB%E7%84%A1%E5%90%8D%E3%82%AF%E3%83%A9%E3%82%B9%E3%82%92%E7%90%86%E8%A7%A3%E3%81%97%E3%82%88%E3%81%86.pdf" title="Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf">Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf</a></p>
 
 <h3 id="odp-形式">odp 形式</h3>
 
-<p><a href="../../../Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp" title="Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp">Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/Java%20%E3%81%AE%E6%8A%BD%E8%B1%A1%E3%82%AF%E3%83%A9%E3%82%B9%E3%83%BB%E3%82%A4%E3%83%B3%E3%82%BF%E3%83%95%E3%82%A7%E3%83%BC%E3%82%B9%E3%83%BB%E7%84%A1%E5%90%8D%E3%82%AF%E3%83%A9%E3%82%B9%E3%82%92%E7%90%86%E8%A7%A3%E3%81%97%E3%82%88%E3%81%86.odp" title="Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp">Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp</a></p>
 
 <h3 id="ライセンス">ライセンス</h3>
 
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=300&amp;h=105" alt="Cretive Commons BY SA" /></p>
+<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=100" alt="Cretive Commons BY SA" /></p>
 
 <p><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">BY SA について</a></p>
          <div id="disqus_thread"></div>
