--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -105,15 +105,15 @@ ga('send', 'pageview');
 
 <h3 id="pdf-形式">pdf 形式</h3>
 
-<p><a href="../../../基本コマンド集.pdf" title="基本コマンド集.pdf">基本コマンド集.pdf</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E5%9F%BA%E6%9C%AC%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%88%E3%82%99%E9%9B%86.pdf" title="基本コマンド集.pdf">基本コマンド集.pdf</a></p>
 
 <h3 id="svg-形式">svg 形式</h3>
 
-<p><a href="../../../基本コマンド集.svg" title="基本コマンド集.svg">基本コマンド集.svg</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E5%9F%BA%E6%9C%AC%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%88%E3%82%99%E9%9B%86.svg" title="基本コマンド集.svg">基本コマンド集.svg</a></p>
 
 <h3 id="ライセンス">ライセンス</h3>
 
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=300&amp;h=105" alt="Cretive Commons BY SA" /></p>
+<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=100" alt="Cretive Commons BY SA" /></p>
 
 <p><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">BY SA について</a></p>
          <div id="disqus_thread"></div>
