--- a/portfolio/work9/index.html
+++ b/portfolio/work9/index.html
@@ -105,15 +105,15 @@ ga('send', 'pageview');
 
 <h3 id="pdf-形式">pdf 形式</h3>
 
-<p><a href="../../../オブジェクト指向って何？.odp" title="オブジェクト指向って何？.odp">オブジェクト指向って何？.odp</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%AA%E3%83%95%E3%82%99%E3%82%B7%E3%82%99%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%81%A3%E3%81%A6%E4%BD%95%EF%BC%9F.pdf" title="オブジェクト指向って何？.pdf">オブジェクト指向って何？.pdf</a></p>
 
 <h3 id="odp-形式">odp 形式</h3>
 
-<p><a href="../../../オブジェクト指向って何？.odp" title="オブジェクト指向って何？.odp">オブジェクト指向って何？.odp</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%AA%E3%83%95%E3%82%99%E3%82%B7%E3%82%99%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%81%A3%E3%81%A6%E4%BD%95%EF%BC%9F.odp" title="オブジェクト指向って何？.odp">オブジェクト指向って何？.odp</a></p>
 
 <h3 id="ライセンス">ライセンス</h3>
 
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=300&amp;h=105" alt="Cretive Commons BY SA" /></p>
+<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=100" alt="Cretive Commons BY SA" /></p>
 
 <p><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">BY SA について</a></p>
          <div id="disqus_thread"></div>
