--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -105,15 +105,15 @@ ga('send', 'pageview');
 
 <h3 id="pdf-形式">pdf 形式</h3>
 
-<p><a href="../../../キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_windows.pdf" title="キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_Windows.pdf">キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_windows.pdf</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%AD%E3%83%BC%E3%83%9B%E3%82%99%E3%83%BC%E3%83%88%E3%82%99%E3%81%A8%E8%A8%98%E5%8F%B7%EF%BC%88%E3%81%8D%E3%81%93%E3%82%99%E3%81%86%EF%BC%89%E3%83%BB%E7%89%B9%E6%AE%8A%EF%BC%88%E3%81%A8%E3%81%8F%E3%81%97%E3%82%85%EF%BC%89%E3%82%AD%E3%83%BC%E3%81%AE%E8%AA%AD%E3%81%BF%E6%96%B9_windows.pdf" title="キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_windows.pdf">キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_windows.pdf</a></p>
 
 <h3 id="svg-形式">svg 形式</h3>
 
-<p><a href="../../../キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_windows.svg" title="キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_Windows.svg">キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方_windows.svg</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%AD%E3%83%BC%E3%83%9B%E3%82%99%E3%83%BC%E3%83%88%E3%82%99%E3%81%A8%E8%A8%98%E5%8F%B7%EF%BC%88%E3%81%8D%E3%81%93%E3%82%99%E3%81%86%EF%BC%89%E3%83%BB%E7%89%B9%E6%AE%8A%EF%BC%88%E3%81%A8%E3%81%8F%E3%81%97%E3%82%85%EF%BC%89%E3%82%AD%E3%83%BC%E3%81%AE%E8%AA%AD%E3%81%BF%E6%96%B9.svg" title="キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方.svg">キーボードと記号（きごう）・特殊（とくしゅ）キーの読み方.svg</a></p>
 
 <h3 id="ライセンス">ライセンス</h3>
 
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=300&amp;h=105" alt="Cretive Commons BY SA" /></p>
+<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=100" alt="Cretive Commons BY SA" /></p>
 
 <p><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">BY SA について</a></p>
          <div id="disqus_thread"></div>
