add hint & game

--- a/portfolio/work12/index.html
+++ b/portfolio/work12/index.html
@@ -2,7 +2,7 @@
 <html lang="ja-jp">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Java の抽象クラス・インタフェース・無名クラスを理解しよう</title>
+<title>シューティングゲーム</title>
 <meta name="description" content="小学生向けのプログラミング教室 Gramin">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -96,33 +96,41 @@ ga('send', 'pageview');
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Java の抽象クラス・インタフェース・無名クラスを理解しよう</h1>
-         <p>キッズプログラミング教室 Gramin で<a href='https://gramin.jp/class/'>スマートフォンアプリ開発クラス（2017年3月閉講）</a>向けに作成した資料です。</p>
+         <h1>シューティングゲーム</h1>
+         <p><a href='https://gramin.jp'>キッズプログラミング教室 Gramin</a> で講師（こうし）が小学校におじゃまして一緒（いっしょ）に Scratch ゲームを作った時に使った資料（しりょう）です。</p>
 
-<p>Java で抽象クラス・インタフェースの理解に苦しむ方を対象にしています。身近な例（哺乳類・爬虫類）を使って抽象クラス・インタフェースの使い道を簡単に説明し、無名クラスについても簡単に触れています。
+<p>ちびっこモンスターにボールを当ててやっつけていくゲームです。30秒以内に何匹（なんびき）たおせるかな？
 </p>
 
-<p><img alt='Java の抽象クラス・インタフェース・無名クラスを理解しよう' src='../../img/portfolio/Java の抽象クラス・インタフェース・無名クラスを理解しよう.png' style='width:100%;'/></p>
+<p><img alt='シューティングゲーム' src='../../img/portfolio/lets-scratch-game003.png' style='width:100%;'/></p>
 
-<h3 id="pdf-形式">pdf 形式</h3>
+<h3 id="このゲームであそんでみる">このゲームであそんでみる</h3>
 
-<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/Java%20%E3%81%AE%E6%8A%BD%E8%B1%A1%E3%82%AF%E3%83%A9%E3%82%B9%E3%83%BB%E3%82%A4%E3%83%B3%E3%82%BF%E3%83%95%E3%82%A7%E3%83%BC%E3%82%B9%E3%83%BB%E7%84%A1%E5%90%8D%E3%82%AF%E3%83%A9%E3%82%B9%E3%82%92%E7%90%86%E8%A7%A3%E3%81%97%E3%82%88%E3%81%86.pdf" title="Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf">Java の抽象クラス・インタフェース・無名クラスを理解しよう.pdf</a></p>
+<p><a href="https://gramin.jp/lets-scratch-game003-2/">このゲームであそんでみる</a></p>
 
-<h3 id="odp-形式">odp 形式</h3>
+<h3 id="このゲームの作り方">このゲームの作り方</h3>
 
-<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/Java%20%E3%81%AE%E6%8A%BD%E8%B1%A1%E3%82%AF%E3%83%A9%E3%82%B9%E3%83%BB%E3%82%A4%E3%83%B3%E3%82%BF%E3%83%95%E3%82%A7%E3%83%BC%E3%82%B9%E3%83%BB%E7%84%A1%E5%90%8D%E3%82%AF%E3%83%A9%E3%82%B9%E3%82%92%E7%90%86%E8%A7%A3%E3%81%97%E3%82%88%E3%81%86.odp" title="Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp">Java の抽象クラス・インタフェース・無名クラスを理解しよう.odp</a></p>
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%B9%E3%82%AF%E3%83%A9%E3%83%83%E3%83%81%E3%82%AF%E3%83%A9%E3%83%95%E3%82%99/%E3%82%B7%E3%83%A5%E3%83%BC%E3%83%86%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%82%B1%E3%82%99%E3%83%BC%E3%83%A0/%E3%82%B7%E3%83%A5%E3%83%BC%E3%83%86%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%82%B1%E3%82%99%E3%83%BC%E3%83%A0%E3%82%92%E4%BD%9C%E3%82%8D%E3%81%86.pdf">シューティングゲームを作ろう.pdf</a></p>
+
+<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%B9%E3%82%AF%E3%83%A9%E3%83%83%E3%83%81%E3%82%AF%E3%83%A9%E3%83%95%E3%82%99/%E3%82%B7%E3%83%A5%E3%83%BC%E3%83%86%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%82%B1%E3%82%99%E3%83%BC%E3%83%A0/%E3%82%B7%E3%83%A5%E3%83%BC%E3%83%86%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%82%B1%E3%82%99%E3%83%BC%E3%83%A0%E3%82%92%E4%BD%9C%E3%82%8D%E3%81%86.odp">シューティングゲームを作ろう.odp</a></p>
+
+<h3 id="このゲームが完成した時のスクリプト">このゲームが完成した時のスクリプト</h3>
+
+<p><a href='https://github.com/gramin-programming/kids-programming-resource/blob/master/スクラッチクラブ/シューティングゲーム/シューティングゲーム_完成スクリプト.pdf'>シューティングゲーム_完成スクリプト.pdf</a></p>
+
+<p><a href='https://github.com/gramin-programming/kids-programming-resource/blob/master/スクラッチクラブ/シューティングゲーム/シューティングゲーム_完成スクリプト.odp'>シューティングゲーム_完成スクリプト.odp</a></p>
 
 <h3 id="ライセンス">ライセンス</h3>
 
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-sa.png?w=100" alt="Cretive Commons BY SA" /></p>
+<p><img src="https://komtmt.files.wordpress.com/2015/04/by-nd.png?w=100" alt="Cretive Commons BY ND" /></p>
 
-<p><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">BY SA について</a></p>
+<p><a href="https://creativecommons.org/licenses/by-nd/4.0/deed.ja">BY ND について</a></p>
          <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'ぐらみん株式会社が運営している キッズプログラミング教室 Gramin（ぐらみん）で授業の時に利用している教材です。';
-    var disqus_identifier = '\/portfolio\/work6\/';
-    var disqus_title = 'Java の抽象クラス・インタフェース・無名クラスを理解しよう';
-    var disqus_url = '\/portfolio\/work6\/';
+    var disqus_identifier = '\/portfolio\/work12\/';
+    var disqus_title = 'シューティングゲーム';
+    var disqus_url = '\/portfolio\/work12\/';
 
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
