--- a/portfolio/work23/index.html
+++ b/portfolio/work23/index.html
@@ -102,7 +102,7 @@ ga('send', 'pageview');
 <p>Scratch で HP（ヒットポイント）を作る時などに使える変数（へんすう）について説明しました。
 </p>
 
-<p><img alt='座標（ざひょう）について知ろう' src='../../img/portfolio/ref-xy.png' style='width:100%;'/></p>
+<p><img alt='座標（ざひょう）について知ろう' src='../../img/portfolio/ref-variable.png' style='width:100%;'/></p>
 
 <h3 id="pdf-形式">pdf 形式</h3>
 
