--- a/portfolio/work29/index.html
+++ b/portfolio/work29/index.html
@@ -112,17 +112,16 @@ if (!doNotTrack) {
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>自動的に動かそう</h1>
-         <p>小学校におじゃました時やオンラインスクラッチクラスで授業をするときに使う資料（しりょう）です。</p>
-<p>背景（はいけい）を作る方法をまとめました。</p>
-<!-- raw HTML omitted -->
-<h3 id="pdf-形式">pdf 形式</h3>
-<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%B9%E3%82%AF%E3%83%A9%E3%83%83%E3%83%81%E3%82%AF%E3%83%A9%E3%83%95%E3%82%99/%E3%83%92%E3%83%B3%E3%83%88/%E8%87%AA%E5%8B%95%E7%9A%84%E3%81%AB%E5%8B%95%E3%81%8B%E3%81%9D%E3%81%86.pdf">自動的に動かそう.pdf</a></p>
-<h3 id="odp-形式">odp 形式</h3>
-<p><a href="https://github.com/gramin-programming/kids-programming-resource/blob/master/%E3%82%B9%E3%82%AF%E3%83%A9%E3%83%83%E3%83%81%E3%82%AF%E3%83%A9%E3%83%95%E3%82%99/%E3%83%92%E3%83%B3%E3%83%88/%E8%87%AA%E5%8B%95%E7%9A%84%E3%81%AB%E5%8B%95%E3%81%8B%E3%81%9D%E3%81%86.odp">自動的に動かそう.odp</a></p>
-<h3 id="ライセンス">ライセンス</h3>
-<p><img src="https://komtmt.files.wordpress.com/2015/04/by-nd.png?w=100" alt="Cretive Commons BY ND"></p>
-<p><a href="https://creativecommons.org/licenses/by-nd/4.0/deed.ja">BY ND について</a></p>
+         <h1>ぐらみんのタイピングゲーム</h1>
+         <p>キッズプログラミング教室ぐらみんでは小学１年生以上の方が遊びながらタイピングの練習ができるタイピングゲームを用意しています。</p>
+<p>ローマ字は小学校で勉強することの多い訓令式（くんれいしき）をメインにしています。</p>
+<h3 id="タイピングゲームの使い方">タイピングゲームの使い方</h3>
+<p>このタイピングゲームは画面の真ん中に表示された文字列に合わせてキーボードを打っていくだけのシンプルなゲームです。</p>
+<p>うまくタイピングが成功するとプレイヤーの男の子が走り出します。逆に成功しない時間が長いとプレイヤーの男の子が遅くなってきてゲームオーバーになってしまうかもしれません。</p>
+<h4 id="イメージ">イメージ</h4>
+<p><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
+<h3 id="ぐらみんのタイピングゲーム">ぐらみんのタイピングゲーム</h3>
+<p><a href="https://typing.gramin.jp/">https://typing.gramin.jp/</a></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
